# qimgv

./: .gitignore  CMakeLists.txt  README.md  flake.nix  package.nix  video-preview-plan.md
.github/workflows/: nix.yml
plugins/player_mpv/: CMakeLists.txt
qimgv/: CMakeLists.txt  settings.cpp  settings.h
qimgv/components/: directorypresenter.cpp
qimgv/components/thumbnailer/: thumbnailerrunnable.cpp
qimgv/gui/customwidgets/: thumbnailvideoplayer.cpp  thumbnailvideoplayer.h  thumbnailview.cpp  thumbnailview.h  thumbnailwidget.cpp  thumbnailwidget.h  thumbnailwidgetcmp.cpp  thumbnailwidgetcmp.h
qimgv/gui/dialogs/: settingsdialog.cpp  settingsdialog.ui
qimgv/sourcecontainers/: thumbnail.cpp  thumbnail.h
qimgv/tests/: CMakeLists.txt  test_mapoverlay.cpp
